# codex-desktop

./: .gitignore  AGENTS.md  ERROR_HANDLING_IMPROVEMENTS.md  LICENSE  LRU_CACHE_IMPLEMENTATION.md  OPTIMIZATION.md  OPTIMIZATION_REPORT.md  PRD.md  README.md  TYPESAFETY_IMPROVEMENTS.md  TYPE_SAFETY_IMPROVEMENTS.md  TYPE_SAFETY_SUMMARY.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: optimized-release.yml
.sisyphus/: ralph-loop.local.md
e2e/: full-app.spec.ts  onboarding.spec.ts  run-tests.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  state.rs  utils.rs
src-tauri/src/app_server/: ipc_bridge.rs  mod.rs  process.rs
src-tauri/src/codex_import/: config.rs  mod.rs  session.rs
src-tauri/src/commands/: allowlist.rs  app_server.rs  codex_import.rs  mod.rs  projects.rs  sessions.rs  snapshots.rs  thread.rs
src-tauri/src/database/: mod.rs  models.rs
src-tauri/src/snapshots/: mod.rs
src/components/: KeyboardShortcuts.tsx  LazyComponents.tsx
src/components/chat/: ChatEmptyState.tsx  ChatImageUpload.tsx  ChatInputArea.tsx  ChatMessageList.tsx  ChatView.tsx  ChatView.tsx.backup  FileMentionPopup.tsx  SlashCommandPopup.tsx  TaskProgress.tsx  TaskQueue.tsx  heightEstimation.ts  types.ts  useChatCommands.ts  useInputHooks.ts  useMessageListHooks.ts  utils.ts
src/components/dialogs/: AboutDialog.tsx  HelpDialog.tsx  ImportCodexSessionDialog.tsx  KeyboardShortcutsDialog.tsx  ProjectSettingsDialog.tsx  ReviewSelectorDialog.tsx  SnapshotListDialog.tsx
src/components/layout/: MainArea.tsx  Sidebar.tsx  StatusBar.tsx
src/components/multi-agent/: AgentPanel.tsx  MultiAgentView.tsx  OrchestratorView.tsx  SetupView.tsx  index.ts
src/components/multi-agent-v2/: AgentCard.tsx  AgentDetailPanel.tsx  AgentGridView.tsx  ApprovalDialog.tsx  ApprovalPanel.tsx  MultiAgentView.tsx  MultiAgentViewContainer.tsx  PrimaryDecision.tsx  ReviewInbox.tsx  SetupView.tsx  WorkflowStageHeader.tsx  index.ts
src/components/onboarding/: OnboardingFlow.tsx
src/components/sessions/: CloseSessionDialog.tsx  ExportDialog.example.tsx  ExportDialog.tsx  SessionTabs.export-integration.md  SessionTabs.tsx  index.ts
src/components/settings/: SettingsDialog.tsx
src/components/ui/: AsyncErrorBoundary.tsx  ConfirmDialog.tsx  ConnectionStatus.tsx  ContextMenu.tsx  DiffView.tsx  DiffView.utils.ts  ErrorBoundary.tsx  GlobalErrorHandler.tsx  Markdown.tsx  RenameDialog.tsx  StatusIndicator.tsx  StatusIndicator.utils.ts  Toast.tsx  (+2 more)
src/constants/: README.md  animations.ts  index.ts  timeouts.ts  ui.ts
src/hooks/: index.ts  useAsyncOperation.ts  useCardExpansion.ts  useCommandHistory.ts  useDialogKeyboardShortcut.ts  useFocusTrap.ts  useKeyboardShortcuts.ts  useMultiAgent.ts  useOptimisticUpdate.ts  usePendingApprovals.ts  usePhaseSummary.ts  usePopupNavigation.ts  useReducedMotion.ts  useTheme.ts  useUndoRedo.ts  useUndoRedoShortcuts.ts
src/lib/: ThemeContext.ts  agent-types.ts  agent-utils.ts  api.ts  apiCache.ts  commandExecutor.ts  errorUtils.ts  eventBus.ts  events.ts  lazyPreload.ts  logger.ts  multiAgentPrompt.ts  safety-utils.ts  slashCommands.ts  theme.tsx  typeGuards.ts  useTheme.ts  utils.ts  validation.ts
src/stores/: account.ts  app.ts  commandHistory.ts  models.ts  multi-agent-v2.ts  multi-agent.ts  projects.ts  server-connection.ts  sessions.ts  settings.ts  thread-lru-test.ts  thread.ts  thread.ts.backup  thread.ts.bak  thread.ts.bak2  undoRedo.ts
src/test/: setup.ts  test-utils.tsx
(+91 files in other folders)
