[package]
name = "codex-desktop"
version = "0.1.0"
description = "A beautiful desktop GUI for Codex CLI"
authors = ["you"]
edition = "2021"

[lib]
name = "codex_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.34", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
which = "7"
base64 = "0.22"
parking_lot = "0.12"
walkdir = "2"
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Release optimizations for maximum performance
[profile.release]
# Maximum optimization level
opt-level = 3

# Enable Link Time Optimization for better cross-crate optimizations
lto = true

# Use a single codegen unit for maximum optimization
# This reduces parallelism but improves optimization
codegen-units = 1

# Strip debug symbols to reduce binary size
# Use "symbols" for maximum size reduction, or true for basic stripping
strip = "symbols"

# Use abort instead of unwind for smaller binary size
panic = "abort"

# Profile-guided optimization (PGO) preparation
# Uncomment the following lines if you want to use PGO:
# 1. Build with: RUSTFLAGS="-C profile-generate=/tmp/pgo-data" cargo build --release
# 2. Run the binary with typical workloads
# 3. Merge data: llvm-profdata merge -o /tmp/pgo-data/merged.profdata /tmp/pgo-data/
# 4. Rebuild with: RUSTFLAGS="-C profile-use=/tmp/pgo-data/merged.profdata" cargo build --release

# Optimize for specific CPU features
# Uncomment if targeting modern CPUs (post-2015)
# target-cpu = "native"

# Profile for development builds (faster compilation, reasonable performance)
[profile.dev]
# Basic optimizations for dev builds
opt-level = 1

# Keep debug assertions in dev builds
debug-assertions = true

# Keep overflow checks in dev builds
overflow-checks = true

# Profile for test builds
[profile.test]
# Basic optimizations for test builds
opt-level = 1

# Keep debug info for better test failure reports
debug = true

# Benchmark profile for performance testing
[profile.bench]
# Maximum optimizations for benchmarks
opt-level = 3
lto = true
codegen-units = 1
